--- a/WEB222/activity3.html
+++ b/WEB222/activity3.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find the area</title>
-    <script>
-        function calculateArea(width, leng)
-        {
-            let area = width * leng;    
-            return area;
-        }
+    <script src="./mylibrary.js">
+        
     </script>
 </head>
 
