week3 activity 1 upload

--- a/WEB222/Week 3/Week3-Activity2.html
+++ b/WEB222/Week 3/Week3-Activity2.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         var today = new Date();
-        console.log("0" + today.getHours() + ":"+ today.getMinutes() + ":" + today.getSeconds());
+        console.log(today.getHours() + ":"+ today.getMinutes() + ":" + today.getSeconds());
     </script>
 </body>
 </html>
