2nd session update

--- a/WEB222/Week 3/Week3-Tut1-p2.html
+++ b/WEB222/Week 3/Week3-Tut1-p2.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         // Create Date object instance
-        var today = new Date();
+        var today = new Date().toDateString();
         console.log(today);
         // Only display year
         console.log(today.getFullYear());
