--- a/WEB222/Week 5/activity_5-2.html
+++ b/WEB222/Week 5/activity_5-2.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activity 5-2</title>
+    <link rel="stylesheet" href="./activity-style.css">
     <img src="./Web222-Lab7-1/img1-lab.jpg">
 </head>
 <body>
    <h1>Welcome to NewYou Personal Training</h1> 
-</br>
     <p>
         We provide comprehensive personal training and physical fitness services to the greater Cleveland area. Please take a
     </br> 
         moment to find out how we can help create a whole new you! 
     </p>
-    <h3>Our services include:</h3>
+    <h2>Our services include:</h2>
     <ul>
         <li>Fitness evaluations with optional 360° Computerized Body Profile.</li>
         <li>Complete individualized training plan with free workout schedule calendar.</li>
@@ -23,21 +23,19 @@
         <li>Email and text messaging reminders to help keep you on track.</li>
         <li>Workout group sessions for those who prefer to exercise in a group setting.</li>
     </ul>
-    <p>All fitness and nutrition services can be provided at our brand new facility or in the privacy of your own home or office.</p>
-    <hr style="width: 50%;">
-    <p style="text-indent: 50px;">
-        I was struggling to lose weight after the birth of my second child. My friend recommended NewYou, and
+    <p id="facility">All fitness and nutrition services can be provided at our brand new facility or in the privacy of your own home or office.</p>
+    </br>
+    <hr style="width: 95%;">
+    <p id="quote">I was struggling to lose weight after the birth of my second child. My friend recommended NewYou, and
     </br>
         after the first three months I had lost 30 pounds. Thanks to the personal attention from their trainers and
     </br>
         counselors, I’ve been able to keep the weight off for two years. I’m in the best shape of my life!
-    </br>
-    </br>
-        —Justine Reynolds, Cleveland
     </p>
-    <hr style="width: 50%;">
+    <p id="name">—Justine Reynolds, Cleveland</p>
+    <hr style="width: 95%;">
+    </br>
     <h2>Call today to speak to one of our certified fitness specialists.</h2>
-</br>
-    <p>NewYou Personal Training, 3451 West Oxmoor Avenue, Cleveland, TN 37311. (555) 639-9681 or (555) NEW-YOU1</p>
+    <p id ="contact">NewYou Personal Training, 3451 West Oxmoor Avenue, Cleveland, TN 37311. (555) 639-9681 or (555) NEW-YOU1</p>
 </body>
 </html>
