Week 6 final rendition

--- a/WEB222/Week 6/layout2.html
+++ b/WEB222/Week 6/layout2.html
@@ -31,6 +31,11 @@
          margin: 10px;
          background: aqua;
       }
+      footer{
+         padding: 10px;
+         margin: 10px;
+         background: greenyellow;
+      }
    </style>
 </head>
 
@@ -40,6 +45,8 @@
    </header>
 
    <section>
+      <!--Padding is used here to make space between the content and the border-->
+      <!--Margin creates space between each article wrap-->
       <article>
          <h2>First article</h2>
          <p>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry
@@ -66,7 +73,8 @@
       </article>
    </section>
    <footer>
-      Joseph Mwamba-Mukuna
+      <h2>Contact Info</h2>
+      <em>Joseph Mwamba-Mukuna jmwamba-mukuna@myseneca.ca</em>
    </footer>
 </body>
 
