--- a/WEB222/Assignment/ASN1-Q5.html
+++ b/WEB222/Assignment/ASN1-Q5.html
@@ -15,6 +15,7 @@
     <title>Appointment Management</title>
 </head>
 <body>
+    <h2>Click below to set an appointment</h2>
     <button onclick="main()">Set Appointment</button>
     <script>
         function getUserInfo() {
