--- a/WEB222/Assignment/ASN1-a_JosephMwambaMukuna.html
+++ b/WEB222/Assignment/ASN1-a_JosephMwambaMukuna.html
@@ -1,5 +1,5 @@
 <!--/***************************************************************************** 
-* WEB222 – Assignment 1 
+* WEB222 NCC– Assignment 1 
 * I declare that this assignment is my own work in accordance with Seneca Academic Policy. 
 * No part of this assignment has been copied manually or electronically from any other source 
 * (including web sites) or distributed to other students. 
@@ -22,6 +22,5 @@
         <p>"The power of the Web is in its universality. Access by everyone regardless of disability is an</p>
         <p>essential aspect."</p>
     </blockquote>
-    
 </body>
 </html>
