--- a/WEB222/Week 6/Sess 2/warmup1.html
+++ b/WEB222/Week 6/Sess 2/warmup1.html
@@ -8,43 +8,42 @@
         html{
             font-family:sans-serif;
         }
+        body{
+          margin: 0;
+        }
         #box1{
-            background-color: lightgray;
-            width: 1000px;
-            height: 100px;
-            float: left;
-            text-align: center;
-            padding: 50px;
+          padding: 10px;
+         margin: 10px;
+         background: aqua;
+         text-align: center;
         }
         #box2{
-            width: 323px;
+          width: 323px;
             height: 200px;
-            float: left;
-            padding-top: 20px;
-            padding-left: 30px;;
+            padding-top: 30px;
+            padding-left: 30px;
+          float: left;
+            background: blue;
           }
         #box3{
             width: 323px;
-            height: 400px;
-            float: left;
+            height: 200px;
             padding-top: 30px;
             padding-left: 30px;
+            float: left;
+
+            background: purple;
           }
         #box4{
             width: 323px;
             height: 200px;
-            float: left;
             padding-top: 30px;
             padding-left: 30px;
+            float: left;
+
+            background: gray;
 
           }
-          #wrapper{
-            margin-left: auto;
-            margin-right: auto;
-            width: 1000px;
-            height: auto;
-
-        }
     </style>
 </head>
 <body>
