--- a/WEB222/Week 6/Sess 2/activity1.html
+++ b/WEB222/Week 6/Sess 2/activity1.html
@@ -16,7 +16,7 @@ body {
 .header {
   padding: 30px;
   text-align: center;
-  background: white;
+  background-image: url(./gigachad.jpg);
 }
 
 .header h1 {
