--- a/WEB222/Assignment 3/Source Code/ASN3-Q3.html
+++ b/WEB222/Assignment 3/Source Code/ASN3-Q3.html
@@ -11,7 +11,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Question 3</title>
 </head>
 <body>
   <h2>My Favorite CDs</h2>
