--- a/WEB222/Project/index.html
+++ b/WEB222/Project/index.html
@@ -36,6 +36,9 @@
         .row{
             display: flex;
         }
+        .card {
+            margin: 15px;
+        }
     </style>
 </head>
 <body>
