adding mount images

--- a/WEB222/Project/Results.html
+++ b/WEB222/Project/Results.html
@@ -69,9 +69,11 @@
               <span class="character-info" id="server">Server</span>
             </div>
             <div class="group-9">
-              <div class="rectangle-a"></div>
-              <span class="news-title"
-                >News Title Lorem Ipsum Dolor Sit Amet
+              <div class="rectangle-a">
+                <img src="" class="mountImg">
+              </div>
+              <span class="news-title">
+                News Title Lorem Ipsum Dolor Sit Amet
               </span>
             </div>
             <div class="group-b">
