--- a/WEB222/Project/landing.html
+++ b/WEB222/Project/landing.html
@@ -37,7 +37,7 @@
           <div class="flex-row-e">
             <div class="search-bar">
               <div class="content">
-                <input type="number" class="input" placeholder="Enter ID"/>
+                <input type="text" class="input" placeholder="Enter ID"/>
               </div>
             </div>
             <button class="classic-button">
